# investiga-br-acc

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  ABUSE_RESPONSE.md  CHANGELOG.md  DISCLAIMER.md  Dockerfile  ETHICS.md  LGPD.md  Makefile  PRIVACY.md  README.md  SECURITY.md  TERMS.md  docker-compose.yml  opencode.json
etl/: Dockerfile  pyproject.toml
etl/scripts/: _download_utils.py  download_bcb.py  download_caged.py  download_camara.py  download_camara_inquiries.py  download_ceaf.py  download_ceaf_api.py  download_cepim.py  download_cnpj.py  download_cnpj_bq.py  download_cpgf.py  download_cvm.py  download_cvm_funds.py  download_datajud.py  download_dou.py  download_eu_sanctions.py  download_holdings.py  download_icij.py  download_leniency.py  download_mides.py  download_ofac.py  download_opensanctions.py  download_pep_cgu.py  download_pgfn.py  download_pncp.py  download_querido_diario.py  download_renuncias.py  download_sanctions.py  download_sanctions_api.py  download_senado.py  download_senado_cpi_archive.py  download_senado_cpis.py  download_senado_parlamentares.py  download_siconfi.py  download_siop.py  download_stf.py  download_tcu.py  download_tesouro_emendas.py  download_transferegov.py  download_transparencia.py  (+7 more)
etl/tests/: test_base.py  test_bcb_pipeline.py  test_bndes_pipeline.py  test_caged_pipeline.py  test_camara_inquiries_pipeline.py  test_camara_pipeline.py  test_ceaf_pipeline.py  test_cepim_pipeline.py  test_cnpj_pipeline.py  test_comprasnet_pipeline.py  test_cpgf_pipeline.py  test_cvm_funds_pipeline.py  test_cvm_pipeline.py  test_datajud_pipeline.py  test_dou_pipeline.py  (+40 more)
(+501 files in other folders)
